<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/information_layout_padding"
    tools:context=".MainActivity2">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/info_views_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/info_layout_fname_et"
            android:hint="@string/info_layout_fname_et_txt"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/info_views_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/info_layout_lname_et"
            android:hint="@string/info_layout_lname_et_txt"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/info_views_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/info_layout_job_et"
            android:hint="@string/info_layout_job_et_txt"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/info_views_margin">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/info_layout_age_et"
            android:hint="@string/info_layout_age_et_txt"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info_layout_load_btn"
        android:text="@string/info_layout_load_image_btn"
        android:textSize="24sp"
        android:padding="15dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/info_views_margin"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/info_layout_submit_btn"
        android:text="@string/info_layout_submit_image_btn"
        android:textSize="24sp"
        android:padding="15dp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/info_views_margin"
        />

</LinearLayout>